--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,15 @@ main.js
 data.json
 
 # test vault artifacts
-test-vault/**/*.md
-test-vault/**/*.png
-test-vault/**/*.jpg
-test-vault/**/*.jpeg
+test-vault/Images/*.md
+test-vault/Assets/*.png
+test-vault/Assets/*.jpg
+test-vault/Assets/*.jpeg
+test-vault/Notes/*.md
+test-vault/*.md
+test-vault/*.png
+test-vault/*.jpg
+test-vault/*.jpeg
 test-vault/.obsidian/workspace.json
 test-vault/.obsidian/app.json
 
