--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ test-vault/*.jpg
 test-vault/*.jpeg
 test-vault/.obsidian/workspace.json
 test-vault/.obsidian/app.json
+test-vault/.obsidian/plugins
 
 # Exclude macOS Finder (System Explorer) View States
 .DS_Store
