--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+		"test": "vitest run",
+
+		"test:ui": "vitest --ui",
 		"deploy": "npm run build && cp main.js manifest.json styles.css test-vault/.obsidian/plugins/paste-image-as-note/",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
+
 	},
 	"keywords": [],
 	"author": "",
@@ -16,10 +20,12 @@
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
+		"@vitest/ui": "^3.2.4",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "4.7.4",
+		"vitest": "^3.2.4"
 	}
 }
