--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"test": "vitest run",
-
 		"test:ui": "vitest --ui",
 		"deploy": "npm run build && cp main.js manifest.json styles.css test-vault/.obsidian/plugins/paste-image-as-note/",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
-
 	},
 	"keywords": [],
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@testing-library/dom": "^10.4.1",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/user-event": "^14.6.1",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"@vitest/ui": "^3.2.4",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+		"happy-dom": "^20.0.5",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4",
